tests/errors/arrays/nesting-mismatch-flat.fn
---
Description: Nested array type assigned a flat array
Expected: FN3201, FN3201
---

type Program
{
    static fn Main -> i32
    {
        var c: i32[][] = [1, 2]
        return 0
    }
}
